--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -151,6 +151,24 @@
                 <a class="text-dark" asp-area="" asp-controller="ManagerMember" asp-action="MemberDetailView">/manager/member/MemberDetailView</a>
             </td>
         </tr>
+        <tr>
+            <td>CompanyBasicInformation</td>
+            <td>
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="CompanyBasicInformation">/Member/Diagnosis/CompanyBasicInformation</a>
+            </td>
+        </tr>
+        <tr>
+            <td>SelfDiagnosis</td>
+            <td>
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelfDiagnosis">/Member/Diagnosis/SelfDiagnosis</a>
+            </td>
+        </tr>
+        <tr>
+            <td>SelfDiagnosisQuestion</td>
+            <td>
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelfDiagnosisQuestion">/Member/Diagnosis/SelfDiagnosisQuestion</a>
+            </td>
+        </tr>
             
     </tbody>
 </table>
