--- a/Ki4C_Solution/Views/Common/Auth/Login.cshtml
+++ b/Ki4C_Solution/Views/Common/Auth/Login.cshtml
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <form asp-controller="CommonAuth" asp-action="Login" method="post" id="input-form">
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="Input_Id" type="email" placeholder=" " asp-for="Id" />
+                            <input class="form-control" id="Input_Id" type="text" placeholder=" " asp-for="Id" />
                             <label for="Input_Email">아이디<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
