--- a/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosis.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosis.cshtml
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../css/style.css" />
-    <title>진단/자체 진단</title>
+@{
+    // Used Table [Member]
+    // 마이페이지 - 탈퇴
+    ViewData["Title"] = "진단/자체 진단";
+}
+
+
     <style>
      /* SelfDiagnosis.html */
     #startButton{
@@ -15,10 +15,7 @@
         border: none;
     }
     </style>
-</head>
-<body>
-    <div id="wrap">
-        <header></header>
+
         <!-- 섹션 -->
         <section style="width: 100%">
             <!-- 콘텐츠 -->
@@ -45,17 +42,3 @@
             <!-- 콘텐츠 -->
         </section>
         <!-- 섹션 -->
-        <footer></footer>
-    </div>
-    <!-- 스크립트 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(function(){
-            $("header").load("../../../include/header.html"); 
-        });
-        $(function(){
-            $("footer").load("../../../include/footer.html"); 
-        });
-    </script> 
-</body>
-</html>
