--- a/Ki4C_Solution/Views/Member/Mypage/MyInfoUpdate.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/MyInfoUpdate.cshtml
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <form asp-controller="MemberMypage" asp-action="MyInfoUpdateConfirm" method="post" id="input-form">
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="input-Id" type="text" placeholder=" " asp-for="ID" value="@Model.ID" readonly />
+                            <input class="form-control" id="input-Id" type="text" placeholder=" " asp-for="Id" value="@Model.Id" readonly />
                             <label for="input-Id">아이디<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
@@ -31,7 +31,7 @@
                             <label for="input-Password-Check">비밀번호 확인<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="input-Name" type="text" placeholder=" " asp-for="Name" value="@Model.Name" readonly />
+                            <input class="form-control" id="input-Name" type="text" placeholder=" " asp-for="UserName" value="@Model.UserName" readonly />
                             <label for="input-Name">이름<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
@@ -39,7 +39,7 @@
                             <label for="input-Email">이메일<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="input-Phone" type="text" placeholder=" " asp-for="Phone" value="@Model.Phone" readonly />
+                            <input class="form-control" id="input-Phone" type="text" placeholder=" " asp-for="PhoneNumber" value="@Model.PhoneNumber" readonly />
                             <label for="input-Phone">휴대폰 번호<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
@@ -58,17 +58,17 @@
                         </div>
                         *@
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="input-Company" type="text" placeholder=" " asp-for="Company" value="@Model.Company" readonly />
+                            <input class="form-control" id="input-Company" type="text" placeholder=" " asp-for="CompanyName" value="@Model.CompanyName" readonly />
                             <label for="input-Company">회사명<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="input-Department" type="text" placeholder=" " asp-for="Department" value="@Model.Department"  />
+                            <input class="form-control" id="input-Department" type="text" placeholder=" " asp-for="DepartmentName" value="@Model.DepartmentName" />
                             <label for="input-Department">부서명</label>
                         </div>
-                        <div class="form-floating mb-3">
+                        @*<div class="form-floating mb-3">
                             <input class="form-control" id="input-Position" type="text" placeholder=" " asp-for="Position" value="@Model.Position"  />
                             <label for="input-Position">직급</label>
-                        </div>
+                        </div>*@
                         <div class="d-flex justify-content-center mt-4 mb-0">
                             <button type="submit" class="btn btn-primary btn-block">수정완료</button>
                         </div>
