DXSelfDiagnosisDetailView 추가 및 빌드방식 Content 변경

--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -242,7 +242,13 @@
                 <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelfDiagnosisQuestion">/Member/Diagnosis/SelfDiagnosisQuestion</a>
             </td>
         </tr>
-            
+        <tr>
+            <td>DXSelfDiagnosisDetailView</td>
+            <td>
+                <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="DXSelfDiagnosisDetailView">/member/mypage/DXSelfDiagnosisDetailView.html</a>
+            </td>
+        </tr>
+        DXSelfDiagnosisDetailView
     </tbody>
 </table>
         
