--- a/Ki4C_Solution/Views/Member/Mypage/DXSelfDiagnosisDetailView.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/DXSelfDiagnosisDetailView.cshtml
@@ -112,7 +112,7 @@
         <div style="width: 80%; margin: auto;">
             <div style="width: 80%; padding: 10px;">
                 <div id="searchImg">
-                    <img style="width: 150px; height: 150px; " src="../../../img/findDocument.png">
+                    <img style="width: 150px; height: 150px; " src="~/images/findDocument.png">
                 </div>
                 <div id="requestData">
                     <p style="font-size: 18p; font-weight: 700;">상세 진단 요청</p>
