--- a/Ki4C_Solution/Views/Shared/_LayoutKi4C_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_LayoutKi4C_Aside_dg.cshtml
@@ -36,7 +36,7 @@
         }
         <!-- //footer -->
     </div>
-    
+    <a src="~/"
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
